--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="grid d-flex flex-column flex-md-row" >
-        <div class="col-md-7 col-sm-12" style="font-family: Roboto;">
+        <div class="col-md-7 col-sm-12">
             <header class="p-4 d-flex flex-column flex-lg-row  justify-content-between align-items-center">
                 <div>
                     <h1>MIHAL ANDONOV</h1>
