--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-
-
-
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="https://img.icons8.com/ios/50/darth-vader.png">    
+    <title>Mihal Andonov CV</title>
 </head>
 <body>
     <div class="grid d-flex flex-column flex-md-row" >
