--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>Mihal Andonov CV</title>
 </head>
 <body>
-    <div class="grid d-flex flex-column flex-md-row" style="font-family: Roboto, sans sans-serif;">
-        <div class="col-md-7 col-sm-12">
+    <div class="grid d-flex flex-column flex-md-row">
+        <div class="col-md-7 col-sm-12"  style="font-family: Roboto, sans sans-serif">
             <header class="p-4 d-flex flex-column flex-lg-row  justify-content-between align-items-center">
                 <div>
                     <h1>MIHAL ANDONOV</h1>
@@ -176,7 +176,7 @@
             </div>
         </div>
 
-        <div class="col-md-5 col-sm-12 bg-primary bg-gradient text-light">
+        <div class="col-md-5 col-sm-12 bg-primary bg-gradient text-light"  style="font-family: Roboto, sans sans-serif;">
             <div class="p-4 m-2">
                 <h2 class="border-bottom pb-4">EDUCATION</h2>
 
