roboto font family

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Mihal Andonov CV</title>
 </head>
 <body>
-    <div class="grid d-flex flex-column flex-md-row display-font-family: Roboto;">
+    <div class="grid d-flex flex-column flex-md-row" style="font-family: Roboto;">
         <div class="col-md-7 col-sm-12">
             <header class="p-4 d-flex flex-column flex-lg-row  justify-content-between align-items-center">
                 <div>
